feat: implement temporary lambda fn for file list check
